@@ -1,3 +1,4 @@
+2015-02-24 Adds modify_number function
 2015-01-14 Adds support for PhoneNumber API
 2013-09-25 Added relayDTMF to <Conference> and async to <DTMF>
 2013-07-23 Conference attribute 'recordWhenAlone' added
